fixed cropping bugs on smallscreen laptop; made sure to clear tinad in localstorage on each page load

--- a/packages/sdk/vanillajs-demo/src/pages/css/widgets.css
+++ b/packages/sdk/vanillajs-demo/src/pages/css/widgets.css
@@ -7,8 +7,7 @@
 }
 
 .top-panel {
-  display: grid;
-  grid-template-columns: 0.8fr 1.2fr;
+  display: flex;
   height: 100%;
   border-bottom:4px solid #aaa;
 }
@@ -19,13 +18,16 @@
 }
 
 .config-widget {
+  flex: 1;
   max-width:none;
   height:100%;
   background:white;
+  overflow:auto;
   position:relative;
 }
 
 .code-editor {
+  flex:1;
   overflow:auto;
   overflow-x: hidden;
 }
